fixing the homepage overflow for mobile and features page

--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -7,32 +7,36 @@
     //border: 1px solid red;
 
     &__sleep{
-       // padding: 200px;
-        max-width: 100%;
-        max-height: 100%;
         background: url(/images/Features-sleep-track.png);
+        background-size: cover;
+        margin-top: 70px;
         margin-bottom: 70px;
+        margin-left: auto ;
+        border-radius: 8px;
         
         h1{
             font-size: 2.5rem;
             color: #fff;
-            padding-top: 1.6em;
-            padding-left: 1.1em;
+            padding: 0.95em 4em 9em 0.75em;
+            
         }
     }
 
     &__workout{
-        //width: 480px;
-        //height: 650px;
+        //padding: 100px 80px;
         background: url(/images/Features-workout-summary.png);
-        margin-left: 3.75em;
+        background-size: cover;
+        background-position: 50% 50%;
+        margin-top: 70px;
         margin-bottom: 70px;
+        margin-right: auto;
+        border-radius: 8px;
+        
 
         h1{
             font-size: 2.5rem;
             color: #fff;
-            padding-top: 1.6em;
-            padding-left: 1.1em;
+            padding: 0.95em 2em 9em 0.75em;
         }
     }
 
