--- a/scss/layout/_health.scss
+++ b/scss/layout/_health.scss
@@ -44,7 +44,7 @@
     &__bottom{
         text-align: center;
         position: relative;
-        top: -22em;
+        top: -18em;
         margin: 0 auto;
 
         &-top-mobile, &-bottom-mobile{
